<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.sallefy.fragment.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"/>

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_down"
            app:exitAnim="@anim/slide_down"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.sallefy.fragment.RegisterFragment"
        android:label="@string/register_label"
        tools:layout="@layout/fragment_register">
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.sallefy.fragment.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_playingSongFragment"
            app:destination="@id/playingSongFragment" />
        <action
            android:id="@+id/action_homeFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" >
            <argument
                android:name="playlist"
                app:argType="com.example.sallefy.model.Playlist"
                app:nullable="true"
                android:defaultValue="@null" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.sallefy.fragment.SearchFragment"
        android:label="@string/search_label"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_playingSongFragment"
            app:destination="@id/playingSongFragment" />
        <action
            android:id="@+id/action_searchFragment_to_playlistFragment"
            app:destination="@id/playlistFragment">
            <argument
                android:name="playlist"
                app:argType="com.example.sallefy.model.Playlist"
                app:nullable="true"
                android:defaultValue="@null" />
        </action>
        <action
            android:id="@+id/action_searchFragment_to_trackOptionsFragment"
            app:destination="@id/trackOptionsFragment" />
        <action
            android:id="@+id/action_searchFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left">
            <argument
                android:name="user"
                app:argType="com.example.sallefy.model.User"
                app:nullable="true"
                android:defaultValue="@null" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/yourLibraryFragment"
        android:name="com.example.sallefy.fragment.YourLibraryFragment"
        android:label="@string/your_library_label"
        tools:layout="@layout/fragment_your_library">
        <action
            android:id="@+id/action_yourLibraryFragment_to_playingSongFragment"
            app:destination="@id/playingSongFragment" />
        <action
            android:id="@+id/action_yourLibraryFragment_to_createTrackFragment"
            app:destination="@id/createTrackFragment" />
        <action
            android:id="@+id/action_yourLibraryFragment_to_optionsFragment"
            app:destination="@id/optionsFragment" />
        <action
            android:id="@+id/action_yourLibraryFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />
        <action
            android:id="@+id/action_yourLibraryFragment_to_trackOptionsFragment"
            app:destination="@id/trackOptionsFragment" />
        <action
            android:id="@+id/action_yourLibraryFragment_to_profileFragment"
            app:destination="@id/profileFragment" >
            <argument
                android:name="user"
                app:argType="com.example.sallefy.model.User"
                app:nullable="true"
                android:defaultValue="@null" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/playingSongFragment"
        android:name="com.example.sallefy.fragment.PlayingSongFragment"
        android:label="@string/playing_song_label"
        tools:layout="@layout/fragment_playing_song">
    </fragment>

    <fragment
        android:id="@+id/addSongToPlaylistFragment"
        android:name="com.example.sallefy.fragment.AddSongToPlaylistFragment"
        android:label="@string/add_song_to_playlist_label"
        tools:layout="@layout/fragment_add_song_to_playlist">
    </fragment>

    <fragment
        android:id="@+id/addTrackToPlaylistFragment"
        android:name="com.example.sallefy.fragment.AddTrackToPlaylistFragment"
        android:label="@string/add_track_to_playlist_label"
        tools:layout="@layout/fragment_add_track_to_playlist">
    </fragment>

    <fragment
        android:id="@+id/createTrackFragment"
        android:name="com.example.sallefy.fragment.CreateTrackFragment"
        android:label="@string/create_track_label"
        tools:layout="@layout/fragment_create_track">
    </fragment>

    <fragment
        android:id="@+id/optionsFragment"
        android:name="com.example.sallefy.fragment.OptionsFragment"
        android:label="@string/options_label"
        tools:layout="@layout/fragment_options">
        <action
            android:id="@+id/action_optionsFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.sallefy.fragment.PlaylistFragment"
        android:label="@string/playlist_label"
        tools:layout="@layout/fragment_playlist">
        <argument
            android:name="playlist"
            app:argType="com.example.sallefy.model.Playlist"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_playlistFragment_to_trackOptionsFragment"
            app:destination="@id/trackOptionsFragment" />
        <action
            android:id="@+id/action_playlistFragment_to_addTrackToPlaylistFragment"
            app:destination="@id/addTrackToPlaylistFragment" />
        <action
            android:id="@+id/action_playlistFragment_to_playingSongFragment"
            app:destination="@id/playingSongFragment" />

    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.sallefy.fragment.ProfileFragment"
        android:label="@string/profile_label"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="user"
            app:argType="com.example.sallefy.model.User"
            app:nullable="true"
            android:defaultValue="@null" />

        <action
            android:id="@+id/action_profileFragment_to_trackOptionsFragment"
            app:destination="@id/trackOptionsFragment" />
        <action
            android:id="@+id/action_profileFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />
        <action
            android:id="@+id/action_profileFragment_to_playingSongFragment"
            app:destination="@id/playingSongFragment" />
    </fragment>

    <fragment
        android:id="@+id/trackOptionsFragment"
        android:name="com.example.sallefy.fragment.TrackOptionsFragment"
        android:label="@string/track_options_label"
        tools:layout="@layout/fragment_track_options">
        <action
            android:id="@+id/action_trackOptionsFragment_to_addSongToPlaylistFragment"
            app:destination="@id/addSongToPlaylistFragment" />
    </fragment>

</navigation>