<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top_playlists_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/popular_playlists"
            android:textAppearance="@style/HeaderTheme" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_playlists_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/top_playlists_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/no_playlists_to_show"
            android:visibility="visible" />


        <TextView
            android:id="@+id/recent_playlists_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/discover_playlists"
            android:textAppearance="@style/HeaderTheme" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_playlists_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/recent_playlists_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/no_playlists_to_show"
            android:visibility="visible" />


        <TextView
            android:id="@+id/followed_playlists_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/followed_playlists"
            android:textAppearance="@style/HeaderTheme" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/followed_playlists_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/followed_playlists_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/no_followed_playlists"
            android:visibility="visible" />
    </LinearLayout>

</ScrollView>