<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_playlist_layout"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:gravity="center_vertical"
    android:background="@drawable/item_list_border">


    <ImageView
        android:id="@+id/item_playlist_photo"
        android:layout_width="@dimen/item_height_without_border"
        android:layout_height="@dimen/item_height_without_border"
        android:layout_centerVertical="true"
        android:contentDescription="@string/playlist_thumbnail_description"
        android:src="@drawable/ic_audiotrack_60dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/item_playlist_photo"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_playlist_title"
            style="@style/PlaylistNameTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_name"
            android:textAlignment="textStart"
            android:textColor="@color/light"/>

        <TextView
            android:id="@+id/item_playlist_author"
            style="@style/AuthorNameTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textColor="@color/light"/>

    </LinearLayout>



</RelativeLayout>