<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:button="@drawable/ic_back_arrow"
            app:buttonTint="@color/light" />

        <TextView
            android:id="@+id/top_followed_playlists_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/top_10_playlists_more_followed"
            android:textAppearance="@style/SmallHeaderTheme" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_followed_playlist_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/top_followed_playlists_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/no_playlists_to_show"
            android:visibility="visible" />


        <TextView
            android:id="@+id/top_liked_tracks_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/top_10_tracks_more_likes"
            android:textAppearance="@style/SmallHeaderTheme" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_liked_tracks_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/top_liked_tracks_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/no_tracks_to_show"
            android:visibility="visible" />

    </LinearLayout>


</ScrollView>